--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-04  MenTaLguY <mental@rydia.net>
+
+	* src/display/nr-arena-glyphs.h: fixed cut-and-paste error in
+	  NRArenaGlyphsGroup::create()
+
 2004-05-02  MenTaLguY <mental@rydia.net>
 
 	* src/file.cpp, src/print.cpp, src/sp-chars.cpp, src/sp-clippath.cpp,
