--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,9 @@
 	* src/libnrtype/nr-type-dictionary.cpp: removed 'private-fonts'
 	  feature (we should rely on fontconfig for "custom" font stuff)
 
+	* configure.in, src/Makefile_include, src/Makefile.am,
+	  src/libarikkei/*: removed the now unused libarikkei
+
 2004-05-05 Nathan Hurst <njh@mail.csse.monash.edu.au>
 
 	* src/dialogs/text-edit.cpp, configure.in: Added support for spell
