--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-06  Carl Hetherington <inkscape@carlh.net>
+
+	* src/sp-line.cpp, src/sp-mask.cpp, src/sp-metrics.cpp:
+	declaration-to-first-use and coding style cleanups
+
 2004-05-05  MenTaLguY  <mental@rydia.net>
 
 	* src/libnrtype/nr-type-dictionary.cpp: removed 'private-fonts'
