--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-08  MenTaLguY <mental@rydia.net>
+
+	* src/sp-item.cpp: move "transformed" signal emission after actual
+	  application of transform
+
 2004-05-08  Kees Cook <kees@outflux.net>
 
 	* src/verbs.cpp, src/help.cpp: localizing "about" and "keys" stuff.
