--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-09  Kees Cook <kees@outflux.net>
+
+	* src/libnrtype/nr-type-xft.cpp: added patch 898200, hopefully this
+	  won't break anyone.
+
 2004-05-08  Kees Cook <kees@outflux.net>
 
 	* src/extension/internal/gdkpixbuf-input.cpp: skip SVG files. (open bug)
