--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 	* src/dialogs/desktop-properties.cpp: added patch 947127, along with
 	  some orientation bugfixes, list cleanup, and logic to select the
 	  correct menu items based on document settings.
+	* configure.in: default to always replace g_ascii_strtod.
 
 2004-05-08  Kees Cook <kees@outflux.net>
 
