--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-05-10  Carl Hetherington <inkscape@carlh.net>
+
+	* src/sp-item.cpp, src/dialogs/display-settings.cpp: primitive
+	support for preserving line widths when scaling.  Thanks to Bulia
+	for telling me what to do :)
+
 2004-05-09  Kees Cook <kees@outflux.net>
 
 	* src/libnrtype/nr-type-xft.cpp: added patch 898200, hopefully this
