--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,19 @@
 	support for preserving line widths when scaling.  Thanks to Bulia
 	for telling me what to do :)
 
+2004-05-09  MenTaLguY <mental@rydia.net>
+
+	* src/sp-paint-server.h: SPPaintServer now uses C++ inheritance
+
+	  (bigger question -- should SPPaintServer derive from SPObject?  I think
+	   not, actually ... it's more something that should be aggregated into
+	   the various paint-server-capable types)
+
+	* src/display/nr-arena-shape.h, src/display/nr-arena-shape.cpp:
+	  first steps in removing SPStyle dependency from NRArenaShape --
+	  add fill and stroke paint server members, and use those instead
+	  of reading directly from an SPStyle.
+
 2004-05-09  Kees Cook <kees@outflux.net>
 
 	* src/libnrtype/nr-type-xft.cpp: added patch 898200, hopefully this
