--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-12  Carl Hetherington <inkscape@carlh.net>
+
+	* src/dialogs/export.cpp: fix faulty logic with exporting of
+	selections.
+
 2004-05-12  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
 	* src/main.cpp (main): Test ENABLE_NLS instead of HAVE_NLS (which
