--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,10 @@
 2004-05-12  Carl Hetherington <inkscape@carlh.net>
 
 	* src/dialogs/export.cpp: fix faulty logic with exporting of
-	selections.
+	selections, as reported by Artemio on the ML.
+
+	* src/dialogs/desktop-properties.cpp: Fix a gtk_table size.
+	Make use of spw_dropdown in one place.
 
 2004-05-12  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
