--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-05-13  Ted Gould <ted@gould.cx>
+
+	* src/file.cpp:
+	Making the default filename _("untitled.svg")
+
 2004-05-12  Kees Cook <kees@outflux.net>
 
 	* config.h.mingw: added g_ascii_strtod macro.
