--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2004-05-14  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
+	* src/libnr/nr-matrix-fns.h, src/libnr/nr-matrix-fns.cpp
+	  (NR::transform): new function.
+
 	* src/Makefile_insert: Move fixes.cpp from libinkpre.a to libinkpost.a.
 	* src/xml/Makefile_insert (xml_repr_action_test_LDADD):
 	  Add libinkpost.a, for fixes.o.  `make check' now works again.
