--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2004-05-14  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
+	* src/libnr/nr-rect.h, src/libnr/nr-rect.cpp (nr_rect_union_pt):
+	  new function.
+
 	* src/libnr/nr-matrix-fns.h, src/libnr/nr-matrix-fns.cpp
 	  (NR::transform): new function.
 
