--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-16  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
+
+	* src/radial.h: Remove this unused header.
+
 2004-05-16  MenTaLguY  <mental@rydia.net>
 
 	* src/libnrtype/nr-type-directory.cpp, src/libnrtype/nr-type-ft2.cpp,
