--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,19 @@
 2004-05-16  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
+	* src/arc-context.h, src/desktop-affine.h, src/dir-util.h,
+	  src/draw-context.h, src/dyna-draw-context.h, src/help.h,
+	  src/knotholder.h, src/prefs-utils.h, src/select-toolbar.h,
+	  src/sp-clippath.h, src/sp-mask.h, src/sp-pattern.h, src/sp-use.h,
+	  src/text-context.h, src/toolbox.h, src/tools-switch.h,
+	  src/dialogs/dialog-events.h, src/dialogs/sp-attribute-widget.h,
+	  src/display/sp-canvas.h, src/helper/gnome-utils.h,
+	  src/helper/png-write.h, src/inkjar/jar.h, src/libnr/nr-matrix.cpp,
+	  src/libnr/nr-point-l.h, src/svg/stringstream.h,
+	  src/svg/svg-affine.cpp, src/widgets/gradient-selector.h,
+	  src/widgets/paint-selector.h, src/widgets/spinbutton-events.h,
+	  src/widgets/spw-utilities.h, src/xml/repr-action.h:
+	  Add missing header files.
+
 	* src/libnr/nr-rotate-fns.h, src/libnr/nr-rotate-fns.cpp: New files.
 	* src/libnr/nr-rotate-fns-test.cpp: New unit test.
 	* src/libnr/Makefile_insert, src/Makefile.am: Reference new files,
