--- a/ChangeLog
+++ b/ChangeLog
@@ -20,7 +20,10 @@
 	* src/libnr/Makefile_insert, src/Makefile.am: Reference new files,
 	  add to unit tests.
 
-	* src/libnr/nr-rotate-ops.h (operator*=): New method.
+	* src/libnr/nr-rotate.h: Add Coord,Coord constructor.
+
+	* src/libnr/nr-rotate.h, src/libnr/nr-rotate-ops.h (operator*=):
+	New method.
 
 	* src/libnr/nr-point-fns.h (point_equalp): New function.
 
