--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 2004-05-16  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
-	* src/xml/repr.h: Cleanup: greater conformance to CodingStyle.
+	* src/select-context.cpp:
+	* src/xml/repr.h:
+	  Cleanup: greater conformance to CodingStyle.
 
 	* src/libnr/nr-macros.h: Don't #include nr-matrix.h, nr-rect.h.
 
