--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2004-05-16  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
+	* src/libnr/nr-rotate-test.cpp: Use new rotate_equalp function. 
+
+	* src/libnr/nr-translate-ops.h (operator-): New function.
+
 	* src/select-context.cpp:
 	* src/xml/repr.h:
 	  src/sp-defs.h:
