Cleanup: greater conformance to CodingStyle.
(bzr r2746)

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,8 +5,9 @@
 	* src/libnr/nr-translate-ops.h (operator-): New function.
 
 	* src/select-context.cpp:
+	* src/selection-chemistry.cpp:
 	* src/xml/repr.h:
-	  src/sp-defs.h:
+	* src/sp-defs.h:
 	  Cleanup: greater conformance to CodingStyle.
 
 	* src/libnr/nr-macros.h: Don't #include nr-matrix.h, nr-rect.h.
