Coding style cleanups.
(bzr r2773)

--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,8 @@
 	* src/libnrtype/nr-type-w32.cpp: Tentative fix for
 	build problems on Win32.
 
+	* src/extension/internal/svg.cpp: Coding style cleanups.
+
 2004-05-17  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
 	* src/sp-item.h, src/sp-item.cpp: Remove unused
