Cleanup: greater conformance to CodingStyle.
(bzr r2792)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2004-05-19  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
+	* src/sp-use.cpp: Cleanup: greater conformance to CodingStyle.
+
 	* src/sp-item-group.cpp (sp_item_group_ungroup): Fix bug #956334:
 	  ungrouping was reversing the order of the group members.
 
